Sun Jan 27 13:37:17 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (struct pipeline): Add ignore_signals member.
	* lib/pipeline.c (pipeline_new): Initialise ignore_signals to 1.
	  (pipeline_join): Set ignore_signals if either input pipeline has
	  it set.
	  (pipeline_start): Only ignore SIGINT and SIGQUIT if ignore_signals
	  is set.
	  (pipeline_wait): Only restore SIGINT and SIGQUIT if ignore_signals
	  is set.
	* lib/decompress.c (decompress_open, decompress_fdopen): Set
	  ignore_signals to 0 so that SIGINT and SIGQUIT are not ignored
	  just because a decompression process is running (Debian bug
	  #462276).
	* docs/NEWS: Document this.

Thu Jan 24 17:12:24 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (INTERRUPTED): Remove.
	* src/man.c (int_handler): Remove; this is useless and
	  non-signal-safe.
	  (main): Don't set SIGINT to int_handler.

Thu Jan 17 09:13:04 GMT 2008  Ming Hua  <minghua-guest@users.alioth.debian.org>

	* po/zh_CN.po: Update from Translation Project.

Tue Jan 15 18:45:22 GMT 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* po/ru.po: Update from Translation Project.
	* man/THANKS: Update e-mail address.

Tue Jan 15 14:37:15 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* m4/man-bdb.m4: Add WITH-DB option; make ACTION-IF-FOUND optional;
	  define BDB_H and BTREE.
	* configure.ac: Make Berkeley DB checks more concise using the
	  above.

Tue Jan 15 12:31:12 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Remove unused AC_HEADER_STDC.

Tue Jan 15 08:42:27 GMT 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Tue Jan 15 08:39:56 GMT 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: Update from Translation Project.

Tue Jan 15 00:01:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* m4/man-compress-lib.m4: New function, MAN_COMPRESS_LIB: like
	  AC_CHECK_LIB but adds the library to LIBCOMPRESS rather than LIBS.